[gd_scene load_steps=15 format=3 uid="uid://yj6ie0ukakwk"]

[ext_resource type="Script" path="res://minigames/esquivar.coches/main.gd" id="1_g4jic"]
[ext_resource type="Texture2D" uid="uid://6b8odl1d0wmt" path="res://minigames/esquivar.coches/road.png" id="1_gv78o"]
[ext_resource type="Script" path="res://minigames/esquivar.coches/playerBehaviour.gd" id="2_l5ipx"]
[ext_resource type="Texture2D" uid="uid://b0rsdimvvv85s" path="res://minigames/esquivar.coches/player256.png" id="3_nkybd"]
[ext_resource type="AudioStream" uid="uid://c0su4vf6a1y2a" path="res://minigames/esquivar.coches/slide.wav" id="4_n5250"]
[ext_resource type="Script" path="res://minigames/esquivar.coches/carBehaviour.gd" id="5_sfcyr"]
[ext_resource type="Texture2D" uid="uid://0hsqyx43s610" path="res://minigames/esquivar.coches/car256.png" id="6_unngc"]
[ext_resource type="Script" path="res://minigames/esquivar.coches/CollisionShape2D.gd" id="7_fkuc0"]
[ext_resource type="AudioStream" uid="uid://bxyqefjys66bc" path="res://minigames/esquivar.coches/monsterwarecochesfinal_FINAL.ogg" id="8_4lffk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gai4"]
size = Vector2(360, 1280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lclmk"]
size = Vector2(360, 1280)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kwq60"]
radius = 60.0
height = 228.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_icvbs"]
size = Vector2(96.2733, 191.304)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ei8as"]
size = Vector2(809, 374)

[node name="main" type="Node2D"]
script = ExtResource("1_g4jic")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="background" type="Sprite2D" parent="."]
texture = ExtResource("1_gv78o")

[node name="screenColliders" type="Node2D" parent="."]

[node name="right" type="TouchScreenButton" parent="screenColliders"]
modulate = Color(0, 0, 0, 1)
position = Vector2(180, 2.08165e-12)
shape = SubResource("RectangleShape2D_5gai4")
passby_press = true

[node name="left" type="TouchScreenButton" parent="screenColliders"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-180, 2.08165e-12)
shape = SubResource("RectangleShape2D_lclmk")
passby_press = true

[node name="player" type="CharacterBody2D" parent="."]
script = ExtResource("2_l5ipx")

[node name="playerSprite" type="Sprite2D" parent="player"]
texture = ExtResource("3_nkybd")

[node name="colision" type="CollisionShape2D" parent="player"]
shape = SubResource("CapsuleShape2D_kwq60")

[node name="slidePlayer" type="AudioStreamPlayer2D" parent="player"]
stream = ExtResource("4_n5250")
volume_db = -3.962

[node name="carSpawner" type="Node2D" parent="."]

[node name="car" type="Area2D" parent="carSpawner"]
position = Vector2(0, -800)
script = ExtResource("5_sfcyr")

[node name="carSprite" type="Sprite2D" parent="carSpawner/car"]
scale = Vector2(1.61, 1.61)
texture = ExtResource("6_unngc")

[node name="colision" type="CollisionShape2D" parent="carSpawner/car"]
position = Vector2(-15, 0)
scale = Vector2(1.61, 1.61)
shape = SubResource("RectangleShape2D_icvbs")

[node name="car2" type="Area2D" parent="carSpawner"]
position = Vector2(0, -1700)
script = ExtResource("5_sfcyr")

[node name="carSprite" type="Sprite2D" parent="carSpawner/car2"]
scale = Vector2(1.61, 1.61)
texture = ExtResource("6_unngc")

[node name="colision" type="CollisionShape2D" parent="carSpawner/car2"]
position = Vector2(-14, 0)
scale = Vector2(1.61, 1.61)
shape = SubResource("RectangleShape2D_icvbs")

[node name="car3" type="Area2D" parent="carSpawner"]
position = Vector2(0, -2600)
script = ExtResource("5_sfcyr")

[node name="carSprite" type="Sprite2D" parent="carSpawner/car3"]
scale = Vector2(1.61, 1.61)
texture = ExtResource("6_unngc")

[node name="colision" type="CollisionShape2D" parent="carSpawner/car3"]
position = Vector2(-14, 0)
scale = Vector2(1.61, 1.61)
shape = SubResource("RectangleShape2D_icvbs")

[node name="car4" type="Area2D" parent="carSpawner"]
position = Vector2(0, -3497)
script = ExtResource("5_sfcyr")

[node name="carSprite" type="Sprite2D" parent="carSpawner/car4"]
scale = Vector2(1.61, 1.61)
texture = ExtResource("6_unngc")

[node name="colision" type="CollisionShape2D" parent="carSpawner/car4"]
position = Vector2(-14, 0)
scale = Vector2(1.61, 1.61)
shape = SubResource("RectangleShape2D_icvbs")

[node name="car6" type="Area2D" parent="carSpawner"]
position = Vector2(0, -5378)
script = ExtResource("5_sfcyr")

[node name="carSprite" type="Sprite2D" parent="carSpawner/car6"]
scale = Vector2(1.61, 1.61)
texture = ExtResource("6_unngc")

[node name="colision" type="CollisionShape2D" parent="carSpawner/car6"]
position = Vector2(-16, 0)
scale = Vector2(1.61, 1.61)
shape = SubResource("RectangleShape2D_icvbs")

[node name="car5" type="Area2D" parent="carSpawner"]
position = Vector2(0, -4409)
script = ExtResource("5_sfcyr")

[node name="carSprite" type="Sprite2D" parent="carSpawner/car5"]
scale = Vector2(1.61, 1.61)
texture = ExtResource("6_unngc")

[node name="colision" type="CollisionShape2D" parent="carSpawner/car5"]
position = Vector2(-16, 0)
scale = Vector2(1.61, 1.61)
shape = SubResource("RectangleShape2D_icvbs")

[node name="Area2D" type="Area2D" parent="."]

[node name="Victory" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -6456)
shape = SubResource("RectangleShape2D_ei8as")
debug_color = Color(0, 0.584314, 0.784314, 0.419608)
script = ExtResource("7_fkuc0")

[node name="musicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_4lffk")
volume_db = 15.93
autoplay = true

[connection signal="pressed" from="screenColliders/right" to="player" method="_on_right_pressed"]
[connection signal="pressed" from="screenColliders/left" to="player" method="_on_left_pressed"]
[connection signal="body_entered" from="carSpawner/car" to="player" method="_on_car_body_entered"]
[connection signal="body_entered" from="carSpawner/car2" to="player" method="_on_car_body_entered"]
[connection signal="body_entered" from="carSpawner/car3" to="player" method="_on_car_body_entered"]
[connection signal="body_entered" from="carSpawner/car4" to="player" method="_on_car_body_entered"]
[connection signal="body_entered" from="carSpawner/car6" to="player" method="_on_car_body_entered"]
[connection signal="body_entered" from="carSpawner/car5" to="player" method="_on_car_body_entered"]
[connection signal="body_entered" from="Area2D" to="player" method="_on_area_2d_body_entered"]
